//
//  SwiftUITests.swift
//  BenchmarkAppUITests
//
//  Created by Macbook Pro on 2023-02-26.
//
import Foundation
import XCTest

final class SwiftUITests: XCTestCase {
    
    let repetitionCount = 10;
    let iterationCountForAnimatedElementsTests = 10;
    
    
    let app = XCUIApplication()
    override func setUpWithError() throws {
        continueAfterFailure = false
        app.launch()
    }
    
    override func tearDownWithError() throws {
        app.terminate()
    }
    
    func typeNumber(app: XCUIApplication, number: String) {
        
        app.textFields["Enter number of elements"].tap()
        
        let moreKey = app/*@START_MENU_TOKEN@*/.keys["more"]/*[[".keyboards",".keys[\"siffror\"]",".keys[\"more\"]"],[[[-1,2],[-1,1],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/
        moreKey.tap()
        
        for char in number{
            let key = app.keys["\(char)"]
            key.tap()
        }
        app/*@START_MENU_TOKEN@*/.buttons["Return"]/*[[".keyboards",".buttons[\"retur\"]",".buttons[\"Return\"]"],[[[-1,2],[-1,1],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/.tap()
    }
     
    
    //     MARK: - Texts tests
    
    
    func testTextPerformance_1() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "1")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Texts"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testTextPerformance_2() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "2")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Texts"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
        
    }
    
    func testTextPerformance_4() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "4")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Texts"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }     }
    
    func testTextPerformance_8() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "8")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Texts"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testTextPerformance_16() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "16")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Texts"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testTextPerformance_32() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "32")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Texts"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testTextPerformance_64() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "64")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Texts"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testTextPerformance_128() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "128")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Texts"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testTextPerformance_256() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "256")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Texts"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    
    func testTextPerformance_512() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "512")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Texts"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testTextPerformance_1024() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "1024")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Texts"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testTextPerformance_2048() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "2048")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Texts"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    //     MARK: - Buttons tests
    func testButtonsPerformance_1() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "1")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Buttons"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testButtonsPerformance_2() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "2")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Buttons"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testButtonsPerformance_4() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "4")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Buttons"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testButtonsPerformance_8() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "8")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Buttons"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testButtonsPerformance_16() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "16")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Buttons"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testButtonsPerformance_32() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "32")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Buttons"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testButtonsPerformance_64() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "64")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Buttons"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testButtonsPerformance_128() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "128")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Buttons"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testButtonsPerformance_256() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "256")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Buttons"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testButtonsPerformance_512() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "512")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Buttons"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testButtonsPerformance_1024() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "1024")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Buttons"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testButtonsPerformance_2048() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "2048")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Buttons"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    
    //     MARK: - Images tests
    func testImagesPerformance_1() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "1")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Images"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testImagesPerformance_2() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "2")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Images"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testImagesPerformance_4() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "4")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Images"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testImagesPerformance_8() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "8")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Images"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testImagesPerformance_16() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "16")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Images"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testImagesPerformance_32() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "32")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Images"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testImagesPerformance_64() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "64")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Images"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testImagesPerformance_128() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "128")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Images"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testImagesPerformance_256() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "256")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Images"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testImagesPerformance_512() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "512")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Images"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testImagesPerformance_1024() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "1024")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Images"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    func testImagesPerformance_2048() throws {
        let measureOptions = XCTMeasureOptions()
        measureOptions.invocationOptions = [.manuallyStart,.manuallyStop]
        measureOptions.iterationCount = repetitionCount
        typeNumber(app: app, number: "2048")
        
        measure(metrics: [XCTCPUMetric(application: app), XCTMemoryMetric(application: app)],
                options: measureOptions) {
            startMeasuring()
            app.buttons["Images"].tap()
            app.navigationBars["_TtGC7SwiftUI32NavigationStackHosting"].buttons["SwiftUI"].tap()
            stopMeasuring()
        }
    }
    
    //     MARK: - Blur tests
    func testBlurPerformance_1() throws {
